--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "crypto": "^1.0.1",
-    "crypto-randomuuid": "^1.0.0",
-    "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {},
   "scripts": {
